# lector_facturas

./: .gitignore  .mcp.json  Dockerfile.worker  Procfile  README.md  pyproject.toml  requirements.txt  tmp_CHOOSE.txt  tmp_QHANDS.txt  tmp_TOASTY.txt  tmp_all_finance_files.txt  tmp_b2b_gen.py  tmp_db_documents.json  tmp_jan_mail_candidates.json  tmp_jan_mail_unmatched.json  tmp_pending_report.txt
.claude/: settings.local.json
data/: review_items.json
scripts/: apply_jan2026_overrides.py  bootstrap_google_drive_structure.py  bootstrap_structure.py  build_pyg_inc_workbook.py  build_pyg_ltd_workbook.py  build_pyg_sl_workbook.py  combined_worker.py  create_next_month_structure.py  download_ipostal_invoices.py  fix_and_regen_pyg_inc.py  fix_informe_vat_detalle_202603.py  fix_regus_feb_and_regen.py  generate_ipostal_pdfs.py  import_adobe_to_drive.py  import_apphoto_examples.py  import_artist_royalties_to_drive.py  import_claris_to_drive.py  import_continuum_to_drive.py  import_correos_to_drive.py  import_dct_to_drive.py  import_gls_to_drive.py  import_hannun_to_drive.py  import_jondo_to_drive.py  import_marketing_to_drive.py  import_noda_to_drive.py  import_payroll_sl_to_drive.py  import_pressing_to_drive.py  import_proco_to_drive.py  import_regus_to_drive.py  import_remaining_pending_to_drive.py  import_rever_to_drive.py  import_review_apphoto_from_drive.py  import_review_dct_from_drive.py  import_review_rever_from_drive.py  import_review_shared_services_from_drive.py  import_review_simple_invoices_from_drive.py  import_shared_services_to_drive.py  import_spring_to_drive.py  (+40 more)
(+180 files in other folders)
