[project]
name = "lector-facturas"
version = "0.1.0"
description = "Backend and automation tooling for invoice intake, review, and storage workflows."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "openpyxl>=3.1.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "psycopg[binary]>=3.2.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lector_facturas" = ["config/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
